--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,8 +5,20 @@
 */
 
 .page.theme_dark {
+
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+}
+
+:root.theme_dark {
+  --bg-color: #000028;
+  --color-major-title: #DB00FF;
+  --text-back-button-color-contrast: #FF0070;
+  --color-title: #000028;
+  --color-paragraph: #F1B2CE;
+  --bg-image: url(../images/cover-image-dark.png);
+  --shadow-color: #ff0070; 
+  --bg-color-titles: #ff0070;
 }
