--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,44 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-image: url(../images/cover-image-light.png);
+  --bg-color: #fff1f7;
+  --color-major-title: #FFC2E6;
+  --text-back-button-color-contrast: #353430;
+  --color-paragraph: #353430;
+  --color-title: #353430;
+  --shadow-color: #FF8DCB; 
+  --bg-color-titles: #FF8DCB;
+}
+
+.page.theme_light .rec {
+  display: none;
+}
+
+.page.theme_light .rec::after {
+  content: '';
+  display: none;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+  --bg-image: url(../images/cover-image-light.png);
+  --bg-color: #fff1f7;
+  --color-major-title: #FFC2E6;
+  --text-back-button-color-contrast: #353430;
+  --color-paragraph: #353430;
+  --color-title: #353430;
+  --shadow-color: #FF8DCB; 
+  --bg-color-titles: #FF8DCB;
+  }
+
+  .page.theme_light .rec {
+    display: none;
+  }
+  
+  .page.theme_light .rec::after {
+    content: '';
+    display: none;
+  }
+
 }
