--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,391 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
+  inline-size: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  background-image: var(--bg-image);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  padding-inline: 10px;
+  background-color: var(--bg-color);
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+}
+
+.rec {
+  font-size: var(--font-size-m);
+  font-weight: var(--font-weight-m);
+  color: var(--text-back-button-color-contrast);
+  text-transform: uppercase;
+  font-family: var(--font-family);
+  position: absolute;
+  inset-inline-end: 29px;
+  inset-block-start: 10px;
+}
+
+.rec::after {
+  content: "";
+  inline-size: 9px;
+  block-size: 9px;
+  position: absolute;
+  background-color: var(--text-back-button-color-contrast);
+  border-radius: 50%;
+  margin-left: 10px;
+  margin-top: 8px;
+  box-shadow: 0 0 4px 2px var(--shadow-color);
+}
+
+.header {
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  block-size: 100vh;
+  align-items: center;
+  min-block-size: 100%;
+  position: relative;
+}
+
+.decorated-zone::before {
+  block-size: 25px;
+  inline-size: 25px;
+  content: "";
+  border-inline-end: 1px solid var(--text-back-button-color-contrast);
+  border-block-start: 1px solid var(--text-back-button-color-contrast);
+  position: absolute;
+  inset-inline-end: 0px;
+  inset-block-start: 10px;
+}
+
+.decorated-zone::after {
+  block-size: 25px;
+  inline-size: 25px;
+  content: "";
+  border-inline-start: 1px solid var(--text-back-button-color-contrast);
+  border-block-end: 1px solid var(--text-back-button-color-contrast);
+  position: absolute;
+  inset-block-end: 10px;
+  inset-inline-start: 0px;
+}
+
+.header__theme-menu-item {
+  inline-size: 70px;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-m);
+  align-items: end;
+  border: none;
+  justify-content: center;
+}
+
+.header__theme-menu-button {
+  background-color: transparent;
+  border: none;
+  block-size: 26px;
+  padding-block: 1.5px;
+  font-size: var(--font-size-m);
+  font-weight: var(--font-weight-m);
+  line-height: var(--line-height-s);
+  font-family: var(--font-family);
+  color: var(--text-back-button-color-contrast);
+  text-transform: lowercase;
+  inline-size: 100%;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid currentColor;
+}
+
+.header__theme-menu-button_active {
+  outline: 1px solid currentColor;
+  pointer-events: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  outline: none;
+  border-block-end: 1px solid currentColor;
+}
+
+.header_title {
+  color: var(--color-major-title);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-weight: var(--font-weight-l);
+  line-height: var(--line-height-l);
+  font-family: var(--font-family);
+  text-shadow: 4px 4px 0 var(--shadow-color);
+}
+
+.header_about {
+  color: var(--color-title);
+  background-color: var(--text-back-button-color-contrast);
+  font-size: var(--font-size-m);
+  font-weight: var(--font-weight-l);
+  line-height: var(--line-height-m);
+  font-family: var(--font-family);
+  block-size: min-content;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+.questions-and-answers {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-l);
+}
+
+.questions-and-answers:first-of-type {
+  margin-block-start: 40px;
+}
+
+.main_title {
+  color: var(--text-back-button-color-contrast);
+  font-family: var(--font-family);
+  font-size: var(--font-size-m);
+  font-weight: var(--font-weight-l);
+  line-height: var(--line-height-m);
+}
+
+.main_content_list {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-l);
+}
+
+.main_content_list_words {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-m);
+}
+
+.subtitle {
+  color: var(--color-title);
+  background-color: var(--text-back-button-color-contrast);
+  font-family: var(--font-family);
+  font-size: var(--font-size-m);
+  font-weight: var(--font-weight-l);
+  line-height: var(--line-height-m);
+}
+
+.different_subtitle {
+  margin-block-end: 10px;
+}
+
+.paragraph {
+  color: var(--color-paragraph);
+  font-family: var(--font-family);
+  font-size: var(--font-size-m);
+  font-weight: var(--font-weight-m);
+  line-height: var(--line-height-m);
+}
+
+a {
+  text-shadow: 1px 1px var(--shadow-color);
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline solid currentColor;
+  text-underline-offset: 5px;
+}
+
+a:focus {
+  border: 1px solid currentColor;
+}
+
+.another_subtitle {
+  color: var(--color-title);
+  background-color: var(--text-back-button-color-contrast);
+  font-family: var(--font-family);
+  font-size: var(--font-size-m);
+  font-weight: var(--font-weight-m);
+  line-height: var(--line-height-m);
+}
+
+.main_content_images {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-m);
+}
+
+.list_images {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap-m);
+}
+
+.images {
+  inline-size: 100%;
+}
+
+.footer_title {
+  color: var(--color-major-title);
+  font-family: var(--font-family);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-weight: var(--font-weight-l);
+  line-height: var(--line-height-l);
+  text-shadow: 2px 2px var(--shadow-color);
+  display: flex;
+  block-size: 100vh;
+  align-items: center;
+  min-block-size: 668px;
+  position: relative;
+  inline-size: 100%;
+  justify-content: center;
+  margin-block-start: 40px;
+  align-items: center;
+}
+
+.bg_color_titles {
+  background-color: var(--bg-color-titles);
+}
+
+@media (width >= 768px) {
+  .page {
+    padding-inline-start: 0px;
+    padding-inline-end: 20px;
+  }
+
+  .decorated-zone::after {
+    inset-block-end: 20px;
+    inset-inline-start: 20px;
+  }
+
+  .decorated-zone::before {
+    inset-inline-end: 0px;
+    inset-block-start: 20px;
+  }
+
+  .rec {
+    inset-inline-end: 29px;
+    inset-block-start: 20px;
+  }
+
+  .header_title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header_about {
+    max-inline-size: 364px;
+    justify-self: end;
+  }
+
+  .main {
+    gap: 80px;
+  }
+
+  .questions-and-answers {
+    display: grid;
+    margin-inline-start: 20px;
+    grid-template-columns: minmax(236px, 1fr) minmax(472px, 1fr);
+    column-gap: 20px;
+  }
+
+  .questions-and-answers:first-of-type {
+    margin-block-start: 60px;
+  }
+
+  .main_content_list {
+    grid-column: 2 / 3;
+  }
+
+  .different_title {
+    min-inline-size: 236px;
+  }
+
+  .different_content_list {
+    grid-column: 1 / -1;
+  }
+
+  .main_content_images {
+    gap: 20px;
+    margin-inline-start: 20px;
+  }
+
+  .list_images {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    grid-template-rows: 192px 230px 318px;
+  }
+
+  .images {
+    block-size: 100%;
+    object-fit: cover;
+  }
+
+  .sunset {
+    grid-column: 1 / 3;
+  }
+
+  .icecream {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+  }
+
+  .tape {
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
+  }
+
+  .books {
+  }
+
+  .street1 {
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
+  }
+
+  .footer_title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    margin-block-start: 60px;
+    min-block-size: 1024px;
+    padding-inline-start: 20px;
+  }
+}
+
+@media (width >= 1024px) {
+  .header__theme-menu {
+    align-self: flex-start;
+    justify-self: center;
+    padding-inline-start: 20px;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+    margin-block-start: 20px;
+  }
+
+  .header_about {
+    max-inline-size: 491px;
+  }
+
+  .questions-and-answers {
+    grid-template-columns: minmax(315px, 1fr) minmax(649px, 1fr);
+  }
+
+  .different_content_list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .street1 {
+    margin-block-start: 5px;
+  }
+
+  .list_images {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    grid-template-rows: 260px 315px 433px;
+  }
+
+  .footer_title {
+    min-block-size: 768px;
+  }
 }
