--- a/styles/light.css
+++ b/styles/light.css
@@ -40,11 +40,11 @@
   --bg-color-titles: #FF8DCB;
   }
 
-  .page.theme_light .rec {
+  .rec {
     display: none;
   }
   
-  .page.theme_light .rec::after {
+  .rec::after {
     content: '';
     display: none;
   }
