--- a/styles/light.css
+++ b/styles/light.css
@@ -38,6 +38,7 @@
   --color-title: #353430;
   --shadow-color: #FF8DCB;
   --bg-color-titles: #FF8DCB;
+  --color-hover: #32312D66;
   }
 
   .rec {
