--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@
   background-attachment: fixed;
   padding-inline: 10px;
   background-color: var(--bg-color);
+  box-sizing: border-box;
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 }
 
@@ -22,6 +23,7 @@
   position: absolute;
   inset-inline-end: 29px;
   inset-block-start: 10px;
+  box-sizing: border-box;
 }
 
 .rec::after {
@@ -34,6 +36,7 @@
   margin-left: 10px;
   margin-top: 8px;
   box-shadow: 0 0 4px 2px var(--shadow-color);
+  box-sizing: border-box;
 }
 
 .header {
@@ -41,8 +44,10 @@
   grid-template-rows: 1fr min-content 1fr;
   block-size: 100vh;
   align-items: center;
-  min-block-size: 100%;
+  min-block-size: 668px;
   position: relative;
+  padding-block: 10px;
+  box-sizing: border-box;
 }
 
 .decorated-zone::before {
@@ -54,6 +59,7 @@
   position: absolute;
   inset-inline-end: 0px;
   inset-block-start: 10px;
+  box-sizing: border-box;
 }
 
 .decorated-zone::after {
@@ -68,7 +74,7 @@
 }
 
 .header__theme-menu {
-  padding-block-start: 10px;
+
 }
 
 .header__theme-menu-item {
@@ -83,6 +89,7 @@
   border: none;
   justify-content: center;
   text-align: center;
+  box-sizing: border-box;
 }
 
 .header__theme-menu-button {
@@ -97,10 +104,11 @@
   color: var(--text-back-button-color-contrast);
   text-transform: lowercase;
   inline-size: 100%;
+  box-sizing: border-box;
 }
 
 .header__theme-menu-button:hover {
-  outline: 1px solid currentColor;
+  outline: 1px solid var(--color-hover);
 }
 
 .header__theme-menu-button_active {
@@ -120,6 +128,7 @@
   line-height: var(--line-height-l);
   font-family: var(--font-family);
   text-shadow: 4px 4px 0 var(--shadow-color);
+  box-sizing: border-box;
 }
 
 .header_about {
@@ -130,19 +139,21 @@
   line-height: var(--line-height-m);
   font-family: var(--font-family);
   block-size: min-content;
-  padding-block-start: 10px;
+  box-sizing: border-box;
 }
 
 .main {
   display: flex;
   flex-direction: column;
   gap: 50px;
+  box-sizing: border-box;
 }
 
 .questions-and-answers {
   display: flex;
   flex-direction: column;
   gap: var(--gap-l);
+  box-sizing: border-box;
 }
 
 .questions-and-answers:first-of-type {
@@ -155,12 +166,14 @@
   font-size: var(--font-size-m);
   font-weight: var(--font-weight-l);
   line-height: var(--line-height-m);
+  box-sizing: border-box;
 }
 
 .main_content_list {
   display: flex;
   flex-direction: column;
   gap: var(--gap-l);
+  box-sizing: border-box;
 }
 
 .main_content_list_words {
@@ -176,6 +189,7 @@
   font-size: var(--font-size-m);
   font-weight: var(--font-weight-l);
   line-height: var(--line-height-m);
+  box-sizing: border-box;
 }
 
 .different_subtitle {
@@ -196,8 +210,7 @@ a {
 }
 
 a:hover {
-  text-decoration: underline solid currentColor;
-  text-underline-offset: 5px;
+  border-block-end: 1px solid currentColor;
 }
 
 a:focus {
@@ -217,12 +230,14 @@ a:focus {
   display: flex;
   flex-direction: column;
   gap: var(--gap-m);
+  box-sizing: border-box;
 }
 
 .list_images {
   display: flex;
   flex-direction: column;
   gap: var(--gap-m);
+  box-sizing: border-box;
 }
 
 .images {
@@ -233,6 +248,7 @@ a:focus {
 footer {
   block-size: 100vh;
   min-block-size: 668px;
+  box-sizing: border-box;
 }
 
 .footer_title {
@@ -243,9 +259,7 @@ footer {
   line-height: var(--line-height-l);
   text-shadow: 2px 2px var(--shadow-color);
   display: flex;
-  block-size: 100vh;
   align-items: center;
-  min-block-size: 668px;
   position: relative;
   inline-size: 100%;
   justify-content: center;
@@ -261,6 +275,10 @@ footer {
   .page {
     padding-inline-start: 0px;
     padding-inline-end: 20px;
+  }
+
+  .header {
+    padding-block: 20px;
   }
 
   .decorated-zone::after {
@@ -364,11 +382,14 @@ footer {
 }
 
 @media (width >= 1024px) {
+
+  .header {
+    padding-block: 0px;
+  }
   .header__theme-menu {
     align-self: flex-start;
     justify-self: center;
     padding-inline-start: 20px;
-    padding-block-start: 20px;
   }
 
   .header__theme-menu-list {
