--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,8 +9,24 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-color: #000028;
+  --color-major-title: #db00ff;
+  --text-back-button-color-contrast: #ff0070;
+  --color-title: #000028;
+  --color-paragraph: #f1b2ce;
+  --bg-image: url(../images/cover-image-dark.png);
+  --shadow-color: #ff0070;
+  --bg-color-titles: #ff0070;
+  --color-hover: #FF007066;
+}
+.page.theme_dark .rec {
+  display: block;
 }
 
+.page.theme_dark .rec::after {
+  content: '';
+  display: inline;
+}
 :root.theme_dark {
   --bg-color: #000028;
   --color-major-title: #db00ff;
@@ -21,3 +37,6 @@
   --shadow-color: #ff0070;
   --bg-color-titles: #ff0070;
 }
+
+
+
